SERVER-34523 Check if FCV is initalized before calling getVersion()